--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,34 @@
 = gradle-about-plugin
 
+This library and Gradle plugin are able to read
+https://github.com/nexB/aboutcode-toolkit/blob/develop/SPECIFICATION.rst[ABOUT files].
+
+ABOUT file is an excellent way to describe your project - what it is, how it is licensed, is it intended for public
+or for internal use only and so on.
+
+Maven has `pom.xml`, which contains all this metadata. Gradle doesn't.
+
+In Gradle world a lot of build authors store metadata about their projects inside build script, using some plugins
+like https://nebula-plugins.github.io/documentation/plugin_overview.html#gradle-contacts-plugin[nebula.contacts]
+or https://aalmiray.github.io/kordamp-gradle-plugins/#_org_kordamp_gradle_licensing[org.kordamp.gradle.licensing].
+
+The problem with this approach is that in order to get this metadata programmatically
+you have to run Gradle, let the project to be configured and read this configuration with some tricky script.
+Or to https://en.wikipedia.org/wiki/Don't_repeat_yourself[repeat yourself] duplicating the same information
+somewhere else. Imagine that you need your CI to run specific stage IF the project is licensed under specific license.
+How would you accomplish that? Is your approach really efficient and DRY?
+
+The other problem is that these Gradle plugins are mostly opinionated. There are no common practices.
+
+Separate standardised ABOUT file, in YAML format, is a solution.
+CI build can read it and know what it is building beforehand.
+Gradle build can read it and use the same metadata during build.
+Also YAML is simple enough so human users can read it too.
+
+== Gradle plugins
+
+TODO
+
 == Differences with aboutcode-toolkit
 
 [cols="3",options="header"]
@@ -25,13 +54,13 @@ a|
 | Accepts multiline strings as well
 | It is not mentioned in specificaton. We consider this as a bug
 
-| Validates contents and returns list of found errors
+| Validates ABOUT content and returns list of found errors
 | Just throws exception when something is not valid
 | Use separate Gradle plugin and task to run `about check` and be sure
 that ABOUT file is correct
 
-| Reads content of TextFileFields
-| Doesn't read
+| Reads contents of TextFileFields
+| Doesn't read them
 | There was no need
 
 | Stores `Field` name
@@ -39,10 +68,27 @@ that ABOUT file is correct
 a|
 1. It's not so easy to get field name from Jackson
 2. It's not obvious which name should be assigned to list items
+3. For our goals, there is little utility in field name
 
-| Doesn't validate license_expression field
-| Validate it
+| Doesn't validate `license_expression` field
+| Validates it
 |
+
+| Prohibits null values
+| Currently allows null values
+| Bug in Jackson https://github.com/FasterXML/jackson-databind/issues/2024
+
+| Is able to read ABOUT in Json and Csv formats as well
+| Is not able to read them
+| There was no need
+
+| Is able to save (serialize) ABOUT
+| Is not able to save
+| There was no need
+
+| Keeps order of fields
+| Doesn't keep order of fields
+| There was no need
 |===
 
 
