--- a/GOAL.adoc
+++ b/GOAL.adoc
@@ -6,8 +6,8 @@ Develop:
 1. Java library
 2. Gradle plugin
 
-that are able to parse ABOUT files according to specification
-(except when ABOUT specification contradicts YAML specification).
+that are able to parse .ABOUT files according to specification
+(except when .ABOUT specification contradicts YAML specification).
 
 Library should be plain Java (no Groovy).
 
@@ -16,8 +16,8 @@ Gradle plugin should also be able to run:
 2. `about attrib`
 
 = NOT GOALS
-1. Java library might not be able to run full validation of ABOUT file
+1. Java library might not be able to run full validation of .ABOUT file
 (run of `about check` does that).
-2. Saving (serialization) of ABOUT files
+2. Saving (serialization) of .ABOUT files
 3. Keep order of fields
-4. Read text files referenced from ABOUT file (or even assert that they exist)
+4. Read text files referenced from .ABOUT file (or even assert that they exist)
